<resources>
    <string name="app_name">Cadastro</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome_completo">Nome completo</string>
    <string name="hint_digite_seu_nome_completo">Digite seu nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="hint_telefone">Ex: 12-93456-7890</string>
    <string name="email">Email</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="sexo">Sexo</string>
    <string name="hint_digite_seu_email">Digite seu email</string>
    <string name="hint_digite_sua_cidade">Digite sua cidade</string>
    <string name="ingressar_na_lista_de_e_mails">Ingressar na lista de e-mails?</string>
    <string name="cb_masculino">Masculino</string>
    <string name="cb_feminino">Feminino</string>
    <string-array name="estados">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string name="saveBtn">Salvar</string>
    <string name="cleanFormBtn">Limpar</string>
</resources>